CONFDEV-21720 In jira issue lozenge the type icon is not vertically centered. - Fix on Mobile and Email notification.

--- a/confluence-jira-plugin/src/main/resources/templates/mobile/extra/jira/mobile-macro.css
+++ b/confluence-jira-plugin/src/main/resources/templates/mobile/extra/jira/mobile-macro.css
@@ -17,10 +17,6 @@
     padding-right: 2px;
 }
 
-.jira-issue .aui-lozenge {
-
-}
-
 .jira-issue .issue-link {
     background-repeat:no-repeat;
     background-position: 0 center;
